Prevent secondary nav overflow on mobiles
Related to #645

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -241,6 +241,10 @@ td {
     width: 100%;
     height: 2.6em;
     line-height: 1.8em;
+
+    + .menu-items  {
+        height: auto;
+    }
 }
 
 .menu-item {
